--- a/han-components/package.json
+++ b/han-components/package.json
@@ -7,7 +7,13 @@
     "dev": "vite",
     "build": "tsc -b && vite build",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "esm": "tsc -p tsconfig.build.json --module ESNext --outDir dist/esm",
+    "cjs": "tsc -p tsconfig.build.json --module CommonJS --outDir dist/cjs",
+    "sassEsm": "sass ./src/Calendar/index.scss ./dist/esm/Calendar/index.css",
+    "sassCjs": "sass ./src/Calendar/index.scss ./dist/cjs/Calendar/index.css",
+    "umd": "npx webpack"
+
   },
   "main": "dist/cjs/index.js",
   "module": "dist/esm/index.js",
