--- a/lowcode-editor/package.json
+++ b/lowcode-editor/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@monaco-editor/react": "^4.6.0",
     "allotment": "^1.20.2",
+    "axios": "^1.11.0",
     "lodash-es": "^4.17.21",
     "react": "^18.3.1",
     "react-dnd": "^16.0.1",
